Fixed annoying second jump in search results after complete class addon

--- a/data/css/rtm.css
+++ b/data/css/rtm.css
@@ -501,7 +501,7 @@ body {
 
 #search.results.complete {
     position: static;
-    margin: 0 0 -104px
+    margin: 0 0 -118px;
 }
 
 #search input {
